--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+#Base for HTML styles
+posts/2020-03-05-base.md 
+
 # Typescript v1 declaration files
 typings/
 
