--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sharp": "^2.5.6",
     "gatsby-plugin-styled-components": "^3.2.3",
-    "gatsby-source-filesystem": "^2.2.4",
+    "gatsby-source-filesystem": "^2.2.5",
+    "gatsby-transformer-remark": "^2.7.5",
     "gatsby-transformer-sharp": "^2.4.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -23,6 +24,7 @@
     "styled-icons": "^10.2.1"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
     "prettier": "2.0.4"
   },
   "keywords": [
