--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Valéria Padilha de Vargas",
   "dependencies": {
+    "algoliasearch": "^4.2.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
@@ -29,6 +30,7 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-instantsearch-dom": "^6.4.0",
     "styled-components": "^5.1.0",
     "styled-icons": "^10.2.1"
   },
