--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-plugin-sitemap": "^2.4.2",
+    "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-styled-components": "^3.2.3",
     "gatsby-remark-images": "^3.3.0",
     "gatsby-remark-lazy-load": "^1.0.2",
