--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-algolia-search": "^0.5.7",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.3.5",
+    "gatsby-plugin-netlify-cms": "^4.3.1",
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sharp": "^2.5.6",
@@ -26,6 +27,7 @@
     "gatsby-transformer-remark": "^2.8.3",
     "gatsby-transformer-sharp": "^2.4.6",
     "lazysizes": "^5.2.0",
+    "netlify-cms-app": "^2.12.12",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
