--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-algolia-search": "^0.5.7",
+    "gatsby-plugin-feed": "^2.5.14",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-netlify-cms": "^4.3.1",
