--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-algolia-search": "^0.5.7",
     "gatsby-plugin-feed": "^2.5.14",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-fonts-with-attributes": "^1.0.7",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-netlify-cms": "^4.3.1",
     "gatsby-plugin-offline": "^3.1.4",
