--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
   "dependencies": {
     "algoliasearch": "^4.2.0",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.20.25",
-    "gatsby-image": "^2.3.4",
+    "gatsby": "^3.13.0",
     "gatsby-plugin-algolia-search": "^0.5.7",
-    "gatsby-plugin-feed": "^2.5.14",
+    "gatsby-plugin-feed": "^3.13.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-fonts-with-attributes": "^1.0.7",
+    "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-manifest": "^2.3.5",
-    "gatsby-plugin-netlify-cms": "^4.3.1",
-    "gatsby-plugin-offline": "^3.1.4",
-    "gatsby-plugin-react-helmet": "^3.2.4",
-    "gatsby-plugin-sharp": "^2.5.6",
-    "gatsby-plugin-sitemap": "^2.4.2",
+    "gatsby-plugin-manifest": "^3.13.0",
+    "gatsby-plugin-netlify-cms": "^5.13.0",
+    "gatsby-plugin-offline": "^4.13.0",
+    "gatsby-plugin-react-helmet": "^4.13.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-plugin-sitemap": "^4.9.0",
     "gatsby-plugin-smoothscroll": "^1.1.0",
-    "gatsby-plugin-styled-components": "^3.2.3",
-    "gatsby-remark-images": "^3.3.0",
+    "gatsby-plugin-styled-components": "^4.13.0",
+    "gatsby-remark-images": "^5.10.0",
     "gatsby-remark-lazy-load": "^1.0.2",
-    "gatsby-remark-prismjs": "^3.5.0",
+    "gatsby-remark-prismjs": "^5.10.0",
     "gatsby-remark-relative-images-v2": "^0.1.5",
-    "gatsby-source-filesystem": "^2.2.5",
-    "gatsby-transformer-remark": "^2.8.3",
-    "gatsby-transformer-sharp": "^2.4.6",
+    "gatsby-source-filesystem": "^3.13.0",
+    "gatsby-transformer-remark": "^4.10.0",
+    "gatsby-transformer-sharp": "^3.13.0",
     "lazysizes": "^5.2.0",
     "netlify-cms-app": "^2.14.40",
     "prismjs": "^1.20.0",
@@ -57,7 +57,7 @@
     "start": "npm run develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "rm -rf node_modules/ && gatsby clean",
+    "clean": "gatsby clean && rm -rf node_modules/",
     "test": "echo && exit 1"
   },
   "repository": {
@@ -66,5 +66,8 @@
   },
   "bugs": {
     "url": "https://github.com/ValchanOficial/valchan.com.br/issues"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
