--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.1.0",
   "author": "Valéria Padilha de Vargas",
   "dependencies": {
-    "algoliasearch": "^4.2.0",
-    "dotenv": "^8.2.0",
+    "algoliasearch": "^4.10.5",
+    "dotenv": "^10.0.0",
     "gatsby": "^3.13.0",
     "gatsby-plugin-algolia-search": "^0.5.7",
     "gatsby-plugin-feed": "^3.13.0",
@@ -30,21 +30,21 @@
     "gatsby-transformer-remark": "^4.10.0",
     "gatsby-transformer-sharp": "^3.13.0",
     "lazysizes": "^5.2.0",
-    "netlify-cms-app": "^2.14.40",
-    "prismjs": "^1.20.0",
+    "netlify-cms-app": "^2.15.44",
+    "prismjs": "^1.24.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-disqus-comments": "^1.4.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.0.0",
-    "react-instantsearch-dom": "^6.4.0",
-    "styled-components": "^5.1.0",
-    "styled-icons": "^10.2.1",
+    "react-icons": "^4.2.0",
+    "react-instantsearch-dom": "^6.12.1",
+    "styled-components": "^5.3.1",
     "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^16.13.0",
-    "prettier": "2.0.4"
+    "@hot-loader/react-dom": "^17.0.1",
+    "prettier": "^2.4.0"
   },
   "keywords": [
     "gatsby"
