updated engine node

--- a/package.json
+++ b/package.json
@@ -68,6 +68,6 @@
     "url": "https://github.com/ValchanOficial/valchan.com.br/issues"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "^14.13.1"
   }
 }
