--- a/package.json
+++ b/package.json
@@ -68,6 +68,6 @@
     "url": "https://github.com/ValchanOficial/valchan.com.br/issues"
   },
   "engines": {
-    "node": "^15.9.0"
+    "node": "16.0.0"
   }
 }
