--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
   "dependencies": {
     "algoliasearch": "^4.10.5",
     "dotenv": "^10.0.0",
-    "gatsby": "^3.14.0",
+    "gatsby": "^4.0.0-zz-next.1",
     "gatsby-plugin-algolia-search": "^0.5.7",
-    "gatsby-plugin-feed": "^3.14.0",
+    "gatsby-plugin-feed": "^4.0.0-zz-next.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-fonts-with-attributes": "^1.0.8",
-    "gatsby-plugin-image": "^1.14.0",
-    "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-netlify-cms": "^5.14.0",
-    "gatsby-plugin-offline": "^4.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.0",
-    "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-plugin-image": "^2.0.0-zz-next.1",
+    "gatsby-plugin-mailchimp": "^4.0.0-zz-next.1",
+    "gatsby-plugin-manifest": "^4.0.0-zz-next.1",
+    "gatsby-plugin-netlify-cms": "^6.0.0-zz-next.8",
+    "gatsby-plugin-offline": "^5.0.0-zz-next.1",
+    "gatsby-plugin-react-helmet": "^5.0.0-zz-next.1",
+    "gatsby-plugin-sharp": "^4.0.0-zz-next.1",
+    "gatsby-plugin-sitemap": "^5.0.0-zz-next.8",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^4.14.0",
-    "gatsby-remark-images": "^5.11.0",
+    "gatsby-plugin-styled-components": "^5.0.0-zz-next.8",
+    "gatsby-remark-images": "^6.0.0-zz-next.1",
     "gatsby-remark-lazy-load": "^1.0.2",
-    "gatsby-remark-prismjs": "^5.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-remark-prismjs": "^6.0.0-zz-next.1",
+    "gatsby-remark-smartypants": "^5.0.0-zz-next.1",
+    "gatsby-source-filesystem": "^4.0.0-zz-next.1",
+    "gatsby-transformer-remark": "^5.0.0-zz-next.1",
+    "gatsby-transformer-sharp": "^4.0.0-zz-next.1",
     "lazysizes": "^5.3.2",
     "netlify-cms-app": "^2.15.44",
     "prismjs": "^1.25.0",
