--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "algoliasearch": "^4.10.5",
     "dotenv": "^10.0.0",
-    "gatsby": "^4.0.0-zz-next.1",
+    "gatsby": "next",
     "gatsby-plugin-algolia-search": "^0.5.7",
     "gatsby-plugin-feed": "^4.0.0-zz-next.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -45,6 +45,9 @@
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
     "prettier": "^2.4.1"
+  },
+  "peerDependencies": {
+    "gatsby": "^4.0.0"
   },
   "keywords": [
     "gatsby"
