--- a/package.json
+++ b/package.json
@@ -5,52 +5,52 @@
   "version": "0.1.0",
   "author": "Valéria Padilha de Vargas",
   "dependencies": {
-    "algoliasearch": "^4.10.5",
-    "dotenv": "^10.0.0",
-    "gatsby": "next",
+    "algoliasearch": "^4.14.2",
+    "dotenv": "^16.0.3",
+    "gatsby": "^5.0.1",
     "gatsby-plugin-algolia-search": "^0.5.7",
-    "gatsby-plugin-feed": "^4.0.0-zz-next.1",
+    "gatsby-plugin-feed": "^5.0.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-fonts-with-attributes": "^1.0.8",
-    "gatsby-plugin-image": "^2.0.0-zz-next.1",
+    "gatsby-plugin-image": "^3.0.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-manifest": "^4.0.0-zz-next.1",
-    "gatsby-plugin-netlify-cms": "^6.0.0-zz-next.8",
-    "gatsby-plugin-offline": "^5.0.0-zz-next.1",
-    "gatsby-plugin-react-helmet": "^5.0.0-zz-next.1",
-    "gatsby-plugin-sharp": "^4.0.0-zz-next.1",
-    "gatsby-plugin-sitemap": "^5.0.0-zz-next.8",
+    "gatsby-plugin-manifest": "^5.0.0",
+    "gatsby-plugin-netlify-cms": "^7.0.0",
+    "gatsby-plugin-offline": "^6.0.0",
+    "gatsby-plugin-react-helmet": "^6.0.0",
+    "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-plugin-sitemap": "^6.0.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^5.0.0-zz-next.8",
-    "gatsby-remark-images": "^6.0.0-zz-next.1",
+    "gatsby-plugin-styled-components": "^6.0.0",
+    "gatsby-remark-images": "^7.0.0",
     "gatsby-remark-lazy-load": "^1.0.2",
-    "gatsby-remark-prismjs": "^6.0.0-zz-next.1",
-    "gatsby-remark-smartypants": "^5.0.0-zz-next.1",
-    "gatsby-source-filesystem": "^4.0.0-zz-next.1",
-    "gatsby-transformer-remark": "^5.0.0-zz-next.1",
-    "gatsby-transformer-sharp": "^4.0.0-zz-next.1",
+    "gatsby-remark-prismjs": "^7.0.0",
+    "gatsby-remark-smartypants": "^6.0.0",
+    "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-transformer-remark": "^6.0.0",
+    "gatsby-transformer-sharp": "^5.0.0",
     "lazysizes": "^5.3.2",
-    "netlify-cms-app": "^2.15.44",
-    "prismjs": "^1.25.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "netlify-cms-app": "^2.15.72",
+    "prismjs": "^1.29.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-disqus-comments": "^1.4.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "react-instantsearch-dom": "^6.12.1",
-    "styled-components": "^5.3.1",
+    "react-icons": "^4.6.0",
+    "react-instantsearch-dom": "^6.38.1",
+    "styled-components": "^5.3.6",
     "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^17.0.1",
-    "prettier": "^2.4.1"
-  },
-  "peerDependencies": {
-    "gatsby": "^4.0.0"
+    "@hot-loader/react-dom": "^17.0.2",
+    "prettier": "^2.7.1"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "blog",
+    "reactjs",
+    "javascript"
   ],
   "license": "MIT",
   "scripts": {
@@ -71,6 +71,6 @@
     "url": "https://github.com/ValchanOficial/valchan.com.br/issues"
   },
   "engines": {
-    "node": "16.0.0"
+    "node": ">=18.0.0"
   }
 }
