fix: setting yarn packageManager

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A blog about a technology-loving developer who constantly seeks knowledge.",
   "version": "0.1.0",
   "author": "Valéria Padilha de Vargas",
+  "packageManager": "yarn@4.0.2",
   "dependencies": {
     "algoliasearch": "^4.14.2",
     "dotenv": "^16.0.3",
