--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Valéria Padilha de Vargas",
   "packageManager": "yarn@4.0.2",
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "algoliasearch": "^4.14.2",
     "dotenv": "^16.0.3",
     "gatsby": "^5.9.1",
@@ -29,12 +30,12 @@
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.0.0",
+    "keen-slider": "^6.8.6",
     "lazysizes": "^5.3.2",
     "netlify-cms-app": "^2.15.72",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-disqus-comments": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-instantsearch-dom": "^6.38.1",
