--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Valéria Padilha de Vargas",
   "packageManager": "yarn@4.0.2",
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@react-spring/web": "^9.7.5",
     "algoliasearch": "^4.14.2",
     "dotenv": "^16.0.3",
@@ -40,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-instantsearch-dom": "^6.38.1",
+    "react-scroll-parallax": "^3.4.5",
     "styled-components": "^5.3.6",
     "styled-media-query": "^2.1.2"
   },
